
SUBDIRS = . default-theme gauges emblems explosion

essentialdatadir = $(pkgdatadir)

essentialdata_DATA = \
	cairo-dock.conf\
	cairo-dock_easy.conf\
	launcher.conf\
	container.conf\
	separator.conf\
	themes.conf\
	main-dock.conf\
	cairo-dock-logo.png\
	cairo-dock.svg\
	default-icon.svg\
	default-indicator.png\
	default-drop-indicator.svg\
	cairo-dock-ok.svg\
	cairo-dock-cancel.svg\
	readme-default-view\
	preview-default.png\
	ChangeLog.txt\
	icon-gradation.png\
	icon-movment.png\
	icon-mouse.png\
	icon-subdock.png\
	icon-frame.png\
	icon-buttons.png\
	icon-bubble.png\
	icon-wave.png\
	hand.svg\
	rotate-desklet.svg\
	retach-desklet.svg\
	icon-icons.svg
	
EXTRA_DIST = $(essentialdata_DATA)\
	cairo-dock
	

