
SUBDIRS = . default-theme gauges emblems explosion

essentialdatadir = $(pkgdatadir)

essentialdata_DATA = \
	cairo-dock.conf\
	launcher.conf\
	container.conf\
	separator.conf\
	themes.conf\
	main-dock.conf\
	default-icon.svg\
	default-indicator.png\
	default-class-indicator.svg\
	cairo-dock-ok.svg\
	cairo-dock-cancel.svg\
	hand.svg\
	rotate-desklet.svg\
	retach-desklet.svg\
	depth-rotate-desklet.svg\
	cairo-dock-logo.png\
	cairo-dock.svg\
	readme-default-view\
	preview-default.png\
	ChangeLog.txt\
	icon-gradation.png\
	icon-movment.png\
	icon-mouse.png\
	icon-subdock.png\
	icon-frame.png\
	icon-buttons.png\
	icon-bubble.png\
	icon-wave.png\
	icon-icons.svg\
	icon-dialogs.svg\
	icon-views.svg\
	icon-accessibility.svg\
	icon-labels.png\
	icon-background.svg\
	icon-taskbar.png\
	icon-desklets.png\
	icon-hidden-dock.png\
	icon-indicators.png\
	icon-system.png\
	cairo-dock-animated.xpm\
	icon-lock-icons.svg
	
	
EXTRA_DIST = $(essentialdata_DATA)\
	cairo-dock
	
