
SUBDIRS = . default-theme gauges emblems explosion

essentialdatadir = $(pkgdatadir)

essentialdata_DATA = \
	cairo-dock.conf\
	cairo-dock-simple.conf\
	launcher.conf\
	container.conf\
	separator.conf\
	file.conf\
	themes.conf\
	main-dock.conf\
	default-icon.svg\
	default-icon-appli.svg\
	default-indicator.png\
	default-class-indicator.svg\
	cairo-dock-ok.svg\
	cairo-dock-cancel.svg\
	hand.svg\
	rotate-desklet.svg\
	retach-desklet.svg\
	depth-rotate-desklet.svg\
	cairo-dock-logo.png\
	cairo-dock.svg\
	readme-default-view\
	preview-default.png\
	ChangeLog.txt\
	icon-gradation.png\
	icon-movment.png\
	icon-mouse.png\
	icon-subdock.png\
	icon-frame.png\
	icon-buttons.png\
	icon-bubble.png\
	icon-wave.png\
	icon-icons.png\
	icon-dialogs.svg\
	icon-views.png\
	icon-visibility.png\
	icon-labels.png\
	icon-background.svg\
	icon-taskbar.png\
	icon-desklets.png\
	icon-hidden-dock.png\
	icon-indicators.png\
	icon-system.png\
	icon-lock-icons.svg\
	icon-position.png\
	icon-behavior.svg\
	icon-appearance.svg\
	icon-accessories.png\
	icon-desktop.svg\
	icon-controler.png\
	icon-connection.svg\
	cairo-dock-animated.xpm\
	help.conf\
	icon-help.png
	
autostartdatadir = $(datadir)/applications
autostartdata_DATA = \
	cairo-dock.desktop\
	cairo-dock-cairo.desktop

icondatadir = $(datadir)/pixmaps
icondata_DATA = \
	cairo-dock.svg

EXTRA_DIST = $(essentialdata_DATA)\
	$(autostartdata_DATA)\
	$(icondata_DATA)
